--- a/style.scss
+++ b/style.scss
@@ -455,7 +455,7 @@ nav {
   p.notice--info {
     margin: 2em 0 !important;
     padding: 1em;
-    background-color: #15aabf;
+    background-color: #ced4da;
   }
 }
 
